healthcare-plus/force-app/main/default/objects/Lab_Result__c/Lab_Result__c.object-meta.xml
<CustomObject>
    <label>Lab Result</label>
    <nameField>
        <displayFormat>LAB-{00000}</displayFormat>
        <label>Lab Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>