healthcare-plus/force-app/main/default/objects/Lab_Result__c/fields/Critical_Flag__c.field-meta.xml
<CustomField>
    <fullName>Critical_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Flag</label>
    <type>Checkbox</type>
</CustomField>