healthcare-plus/force-app/main/default/objects/Lab_Result__c/fields/Provider_Notified__c.field-meta.xml
<CustomField>
    <fullName>Provider_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Notified</label>
    <type>Checkbox</type>
</CustomField>