healthcare-plus/force-app/main/default/objects/Lab_Result__c/fields/Provider_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Provider_Notified_Date__c</fullName>
    <label>Provider Notified Date</label>
    <type>Date</type>
</CustomField>