healthcare-plus/force-app/main/default/objects/Lab_Result__c/fields/Result_Value__c.field-meta.xml
<CustomField>
    <fullName>Result_Value__c</fullName>
    <label>Result Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>