healthcare-plus/force-app/main/default/objects/Lab_Result__c/fields/Test_Catergotry__c.field-meta.xml
<CustomField>
    <fullName>Test_Catergotry__c</fullName>
    <label>Test Catergotry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood_Work</fullName>
            </value>
            <value>
                <fullName>Urine_Analysis</fullName>
            </value>
            <value>
                <fullName>Stool_Tests</fullName>
            </value>
            <value>
                <fullName>Saliva_Tests</fullName>
            </value>
            <value>
                <fullName>Respiratory_Tests</fullName>
            </value>
            <value>
                <fullName>Cardiac_Tests</fullName>
            </value>
            <value>
                <fullName>Imaging_Radiology</fullName>
            </value>
            <value>
                <fullName>Biopsy_Histopathology</fullName>
            </value>
            <value>
                <fullName>Molecular_Genetic_Tests</fullName>
            </value>
            <value>
                <fullName>Microbiology_Cultures</fullName>
            </value>
            <value>
                <fullName>Immunology_Serology</fullName>
            </value>
            <value>
                <fullName>Toxicology_Drug_Screen</fullName>
            </value>
            <value>
                <fullName>Virology_Tests</fullName>
            </value>
            <value>
                <fullName>Endocrine_Hormone_Tests</fullName>
            </value>
            <value>
                <fullName>Oncology_Marker_Tests</fullName>
            </value>
            <value>
                <fullName>Other_Specialized_Tests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>